# cslim

./: .cproject  .gitignore  .project  .travis.yml  1k_slim_message.txt  80k_slim_message.txt  Arduino.mk  CMakeLists.txt  COPYING.txt  CSlim_VS2010.sln  CSlim_VS2010.vcxproj  CSlim_cslim  CSlim_server  ComponentMakefile  LICENSE.md  Makefile  NMakefile  README  README.md  README.txt  appveyor.yml  cslim.pde  cslim.podspec  main.cpp  ocslim.podspec
Debug/: makefile  sources.mk
Debug/src/CSlim/: subdir.mk
Debug/src/Com/: subdir.mk
Debug/src/ComWin32/: subdir.mk
Debug/src/Main/: subdir.mk
Debug/tests/CSlim/: subdir.mk
PageExamples/: content.txt
PageExamples/CounterTest/: content.txt
PageExamples/DivisionTest/: content.txt
PageExamples/PayRollTest/: content.txt
SampleCppFixture/: Fixtures.cpp  LoginDialogDriver.cpp  Main.cpp
SampleCppSlimTable/: content.txt
SlimExecutable/: Count.cpp  Count.h  Division.cpp  Division.h  DivisionFixture.cpp  Exceptions.cpp  Exceptions.h  Fixture.h  Fixtures.cpp  Fixtures.h  Main.cpp  Multiplication.cpp  Multiplication.h  Query.cpp  Query.h  SlimExecutable.sln  SlimExecutable.vcxproj  SlimExecutable.vcxproj.filters
UnitTest/CSlimTests/: CSlimTests.cpp  CSlimTests.vcxproj  CSlimTests.vcxproj.filters  ListExecutorTests.cpp  SlimConnectionHandlerTests.cpp  SlimListDeserializerTests.cpp  SlimListSerializerTests.cpp  SlimListTests.cpp  StatementExecutorTests.cpp  SymbolTableTests.cpp  TestFixture.cpp  TestSlim.cpp  TestSlim.h  TestSlimAgain.cpp  TestSlimAgain.h  stdafx.cpp  stdafx.h
cmake/Modules/: FindCppUTest.cmake
cslim/: CSlim.sln  CSlim.vcxproj  CSlim.vcxproj.filters
cslim/include/CSlim/: Fixture.h  Fixtures.h  ListExecutor.h  SlimConnectionHandler.h  SlimList.h  SlimMain.h  StatementExecutor.h  SymbolTable.h
cslim/include/Com/: SocketServer.h  TcpComLink.h
cslim/src/CSlim/: ListExecutor.cpp  RunFixtures.cpp  SlimConnectionHandler.cpp  SlimList.cpp  SlimListDeserializer.cpp  SlimListSerializer.cpp  StatementExecutor.cpp  SymbolTable.cpp
cslim/src/ComWin32/: SocketServer.cpp  TcpComLink.cpp
fixtures/: CMakeLists.txt  DecisionTableExample.c  ExceptionsExample.c  FixtureInCpp.cpp  Fixtures.c  Main.c  QueryTableExample.c  ScriptTableExample.c  ScriptTableExampleEcho.c  ScriptTableExampleEchoLoudly.c
fixtures/pages/CounterTest/: content.txt
fixtures/pages/DivisionTest/: content.txt
fixtures/pages/EchoLoudlyTest/: content.txt
fixtures/pages/EchoTest/: content.txt
fixtures/pages/ExceptionsTest/: content.txt
fixtures/pages/FirstCslimTest/: content.txt
fixtures/pages/FixtureChainTest/: content.txt
fixtures/pages/LibraryInstancesTest/: content.txt
fixtures/pages/MultiplicationTest/: content.txt
include/CSlim/: Fixtures.h  ListExecutor.h  Slim.h  SlimConnectionHandler.h  SlimList.h  SlimListDeserializer.h  SlimListSerializer.h  SlimUtil.h  StatementExecutor.h  SymbolTable.h  compatibility.h
include/Com/: SocketServer.h  TcpComLink.h
include/ComArduino/: SerialComLink.h  TcpComLink.h
include/ExecutorC/: SymbolTable.h
include/ExecutorObjectiveC/: OCSException.h  OCSInstance.h  OCSInstanceCreator.h  OCSInvocation.h  OCSMethodCaller.h  OCSObjectiveCtoCBridge.h  OCSReturnValue.h  OCSStatementExecutor.h  OCSSymbolDictionary.h
include/Main/: Fixtures.h
include/VS2010/: regex.h
src/: CMakeLists.txt
src/CSlim/: ListExecutor.c  Slim.c  SlimConnectionHandler.c  SlimList.c  SlimListDeserializer.c  SlimListSerializer.c  SlimUtil.c  StatementExecutor.c  SymbolTable.c
src/CSlim_main/: Main.c
src/Com/: SocketServer.c  TcpComLink.c
src/ComArduino/: SerialComLink.cpp  TcpComLink.cpp
src/ComWin32/: SocketServer.c  SocketServer.cpp  TcpComLink.c  TcpComLink.cpp  Win32ComLink.c  Win32SocketServer.c  ws-util.cpp  ws-util.h
src/ExecutorC/: StatementExecutor.c  SymbolTable.c
src/ExecutorObjectiveC/: OCSException.m  OCSInstance.m  OCSInstanceCreator.m  OCSInvocation.m  OCSMethodCaller.m  OCSObjectiveCtoCBridge.m  OCSReturnValue.h  OCSReturnValue.m  OCSStatementExecutor.m  OCSSymbolDictionary.m  OCSlimToObjectiveCBridge.m  StatementExecutor.m  main.m
src/Main/: DecisionTableExample.c  ExceptionsExample.c  FixtureInCpp.cpp  Fixtures.c  Main.c  QueryTableExample.c  ScriptTableExample.c  main.c
tests/: AllTests.cpp  CMakeLists.txt
tests/CSlim/: DecisionTableExample.c  ListExecutorTest.cpp  QueryTableExample.c  ScriptTableExample.c  SlimConnectionHandlerTest.cpp  SlimListDeserializerTest.cpp  SlimListSerializerTest.cpp  SlimListTest.cpp  SlimUtilTest.cpp  StatementExecutorTest.cpp  SymbolTableTest.cpp  TestSlim.c  TestSlim.h
tests/Com/: TcpComLinkTest.cpp
tests/ObjectiveC/: OCSExceptionSpec.m  OCSInstanceCreatorSpec.m  OCSInvocationSpec.m  OCSMethodCallerSpec.m  OCSObjectiveCtoCBridgeSpec.m  OCSReturnValueSpec.m  OCSSelectorSpec.m  OCSStatementExecutorSpec.m  OCSSymbolDictionarySpec.m  OCSlimToObjectiveCBridgeSpec.m  RespondsToStringValue.h  RespondsToStringValue.m  StatementExecutorSpec.m  StatementExecutorSpecKit.m  TestSlim.h  TestSlim.m  TestSlimTwo.h  TestSlimTwo.m  ValidInputTypes.h  ValidInputTypes.m  ValidReturnTypes.h  ValidReturnTypes.m  ValidReturnTypes.swift
tests/Swift/: OCSExceptionSpec.swift  OCSSelectorSpec.swift
